--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,12 @@
             <version>6.0.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.vladimir-bukhtoyarov</groupId>
+            <artifactId>bucket4j-core</artifactId>
+            <version>7.6.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
