Refactor UserService and UserProfileDescription, UserProfile, ExerciseType, and WeekDay models.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,19 @@ application.security.jwt.refresh-token.expiration=86400000
 
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
+
+langchain4j.chat-model.provider=openai
+langchain4j.chat-model.openai.api-key=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
+langchain4j.chat-model.openai.model-name=gpt-4
+langchain4j.chat-model.openai.temperature=0.2
+langchain4j.chat-model.openai.top-p=1.0
+langchain4j.chat-model.openai.max-tokens=3000
+langchain4j.chat-model.openai.presence-penalty=0.0
+langchain4j.chat-model.openai.frequency-penalty=0.0
+langchain4j.chat-model.openai.timeout=PT60S
+langchain4j.chat-model.openai.max-retries=3
+langchain4j.chat-model.openai.log-requests=true
+langchain4j.chat-model.openai.log-responses=true
+
+logging.level.dev.langchain4j=DEBUG
+logging.level.dev.ai4j.openai4j=DEBUG
