--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,13 +21,11 @@ rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
 
 langchain4j.chat-model.provider=openai
-langchain4j.chat-model.openai.api-key=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
-langchain4j.chat-model.openai.model-name=gpt-4
-langchain4j.chat-model.openai.temperature=0.2
+langchain4j.chat-model.openai.api-key=${OPENAI_API_KEY}
+langchain4j.chat-model.openai.model-name=gpt-3.5-turbo-16k
+langchain4j.chat-model.openai.temperature=0.4
 langchain4j.chat-model.openai.top-p=1.0
-langchain4j.chat-model.openai.max-tokens=3000
-langchain4j.chat-model.openai.presence-penalty=0.0
-langchain4j.chat-model.openai.frequency-penalty=0.0
+langchain4j.chat-model.openai.max-tokens=3500
 langchain4j.chat-model.openai.timeout=PT60S
 langchain4j.chat-model.openai.max-retries=3
 langchain4j.chat-model.openai.log-requests=true
