finally our diet service is done, now when a User is creating a workout he will have a chance to get 10 random recipes following the weight options via the spooncular api for recipes. full instructions and ingredients

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ langchain4j.chat-model.openai.log-responses=true
 
 logging.level.dev.langchain4j=DEBUG
 logging.level.dev.ai4j.openai4j=DEBUG
+
+api.spoonacular.key=${SPOONACULAR_API_KEY}
+api.spoonacular.url=https://api.spoonacular.com/recipes
